Fixed project content spacing

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -44,8 +44,8 @@ h2 {
   margin: 0;
   margin-bottom: 0.83em;
   margin-top: 0.83em;
-  font-family: "AvenirBold";
-  font-size: calc(32px + 2vw);
+  font-family: "AvenirBlacker";
+  font-size: calc(28px + 1.75vw);
   color: var(--secondary);
 }
 
@@ -54,7 +54,7 @@ h3 {
   margin-bottom: 0.66em;
   margin-top: 0.66em;
   font-family: "AvenirBold";
-  font-size: calc(28px + 1.5vw);
+  font-size: calc(24px + 1.5vw);
   color: var(--secondary);
 }
 
@@ -63,7 +63,7 @@ h4 {
   margin-bottom: 0.5em;
   margin-top: 0.5em;
   font-family: "Avenir";
-  font-size: calc(24px + 0.8vw);
+  font-size: calc(22px + 0.1vw);
   color: var(--secondary);
 }
 
